--- a/views/products/detail.ejs
+++ b/views/products/detail.ejs
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+    <%- include('../partials/navbar.ejs') %>
+    
     <!-- En el archivo views/products/index.ejs -->
         <h1>Productos</h1>
         <ul>
