--- a/views/products/edit.ejs
+++ b/views/products/edit.ejs
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title></title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
-    </head>
-    <body>
-        <!-- views/products/edit.ejs -->
+<head>
+  <meta charset="UTF-8">
+  <title>Edit Product</title>
+</head>
+<body>
+  <%- include('../partials/navbar.ejs') %>
 
-        <h1>Editar producto</h1>
+  <h1>Edit Product</h1>
+  <form action="/products/<%= product.id %>" method="POST">
+    <input type="hidden" name="_method" value="PUT">
 
-        <form action="/products/{{product.id}}/edit" method="POST">
-        <input type="hidden" name="_method" value="PUT">
-        <div>
-            <label for="nombre_producto">Nombre del producto</label>
-            <input type="text" name="nombre_producto" id="nombre_producto" value="<%= product.nombre_producto %>">
-        </div>
-        <div>
-            <label for="precio">Precio</label>
-            <input type="number" name="precio" id="precio" value="<%= product.precio %>">
-        </div>
-        <div>
-            <label for="descripcion">Descripción</label>
-            <textarea name="descripcion" id="descripcion"><%= product.descripcion %></textarea>
-        </div>
-        <button type="submit">Guardar cambios</button>
-        </form>
+    <label for="nombre_producto">Product Name:</label>
+    <input type="text" id="nombre_producto" name="nombre_producto" value="<%= product.nombre_producto %>"><br><br>
+    <label for="precio">Price:</label>
+    <input type="number" id="precio" name="precio" value="<%= product.precio %>"><br><br>
+    <label for="descripcion">Description:</label>
+    <textarea id="descripcion" name="descripcion"><%= product.descripcion %></textarea><br><br>
+    <input type="submit" value="Save Changes">
 
-    </body>
+  </form>
+
+  <form action="/products/<%= product.id %>/delete" method="POST">
+    <input type="hidden" name="_method" value="DELETE">
+    <p>Are you sure you want to delete <%= product.nombre_producto %>? This action cannot be undone.</p>
+    <input type="submit" value="Delete">
+  </form>
+  
+  
+
+</body>
 </html>
