--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -4,6 +4,8 @@
     <title>Lista de Usuarios</title>
   </head>
   <body>
+    <%- include('../partials/navbar.ejs') %>
+
     <h1>Lista de Usuarios</h1>
     <table>
       <thead>
