--- a/views/products/list.ejs
+++ b/views/products/list.ejs
@@ -29,6 +29,11 @@
         <td>
           <a href="/products/<%= product.id %>">Detalle</a>
           <a href="/products/<%= product.id %>/edit">Editar</a>
+          <form action="/cart/add-to-cart" method="POST">
+            <input type="hidden" name="productId" value="<%= product.id %>">
+            <input type="number" name="cantidad" value="1" min="1" max="10">
+            <button type="submit">Agregar a carrito</button>
+          </form>
           <form action="/products/<%= product.id %>/delete" method="post">
             <button type="submit">Eliminar</button>
           </form>
